# filing-digest

./: .gitignore  CONTEXT.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  digest_narrative.py  logging_config.py  main.py  schemas.py  stub_data.py
backend/app/api/: routes.py
backend/app/clients/: __init__.py  dart.py  sec.py  sec_document.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/embeddings/: __init__.py  backfill.py  kure.py
backend/app/evidence/: __init__.py  service.py
backend/app/figures/: service.py
backend/app/filings/: __init__.py  model.py  persistence.py
backend/db/: init.sql
backend/evals/: README.md  golden_set.yaml  run_eval.py
backend/tests/: __init__.py  test_answer_route.py  test_chunking.py  test_citation_guard.py  test_dart_company_profile.py  test_dart_corpcode.py  test_dart_document.py  test_dart_financials.py  test_dart_list_filings.py  test_database_schema.py  test_digest_narrative.py  test_embeddings.py  test_evidence.py  test_figures.py  test_filing_domain.py  test_financial_calculations.py  test_financial_presentation.py  test_financial_vocabulary_contract.py  test_ingest_cli.py  test_llm_solar.py  test_logging_masking.py  test_narrative.py  test_normalized_filing_persistence.py  test_number_guard.py  test_persist.py  test_routes.py  test_search.py  test_sec_company_facts.py  test_sec_document.py  test_sec_ingest.py  test_sec_list_filings.py  test_sec_search_company.py  test_smoke.py
(+66 files in other folders)
