# Metadata only. Dependencies are managed exclusively in requirements.txt
# (single source of truth) -- do NOT add [project.dependencies] here.
[project]
name = "haeksim-backend"
version = "0.1.0"
description = "Filing digest backend (FastAPI) - DART/SEC filings digest API"
requires-python = "==3.11.*"

[tool.pytest.ini_options]
testpaths = ["tests"]
