# Metadata only. Dependencies are managed exclusively in requirements.txt
# (single source of truth) -- do NOT add [project.dependencies] here.
[project]
name = "filing-digest-backend"
version = "0.1.0"
description = "Filing digest backend (FastAPI) - DART/SEC filings digest API"
requires-python = "==3.11.*"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency injection uses call-in-default by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
# Korean fixture strings exceed the line limit; app code must stay within it.
"tests/*" = ["E501"]
